--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,9 @@
         }
     ],
     "require": {
-        "adrien-wac/plugin-installer": "0.0.4",
         "php": ">=5.6"
     },
     "extra": {
-        "class": "BehaviorSanitize"
+        "installer-name": "BehaviorSanitize"
     }
 }
