--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         }
     ],
     "require": {
-        "php": ">=5.6"
+        "php": ">=5.6",
+        "adrien-wac/plugin-installer": "0.0.5"
     },
     "extra": {
         "installer-name": "BehaviorSanitize"
